--- a/cNk3ZvTr/index.html
+++ b/cNk3ZvTr/index.html
@@ -8,7 +8,7 @@
         <div id="emoji-container"></div>
         <input type="text" id="emoji-input" placeholder="type an emoji 🎉">
         <div class="buttons-wrapper">
-            <button id="push-btn">Add to end TESTE</button>
+            <button id="push-btn">Add to end TESTE2</button>
             <button id="unshift-btn">Add to beginning</button>
         </div>
         <div class="buttons-wrapper">
